--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 futures = "0.3.31"
-futures-timer = "3.0.3"
+futures-time = "3.0.0"
 itertools = "0.13.0"
 paste = "1.0.15"
 pin-project-lite = "0.2.15"
