--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
-name = "rxrs"
+name = "futures-rx"
 version = "0.1.0"
 edition = "2021"
+description = "Rx implementations for the futures crate"
+authors = ["Frank Pepermans <frank@igindo.com>"]
+repository = "https://github.com/frankpepermans/rxrs"
+license-file = "./LICENCE"
+readme = "./README.md"
+keywords = ["Observable", "Subject", "rx", "futures"]
 
 [dependencies]
 futures = "0.3.31"
